# CW4

./: .gitignore  README.md  main.py  pyproject.toml
data/: hh.json
src/: Abstract.py  CompareVacancies.py  GetVacancies.py  Head_Hunter.py  JSONSaver.py  Vacancy.py  utils.py
tests/: conftest.py  test_compare_vacancies.py  test_headhunter.py  test_vacancy.py
