[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Stepanryazan <offish.sk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
config = "^0.5.1"
pytest = "^8.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
